[package]
name = "hivemind"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v4"] }
